--- a/scss/_cannabisMed.scss
+++ b/scss/_cannabisMed.scss
@@ -1,12 +1,6 @@
-.primerseccion {
-  width: 100%;
-  height: 100%;
+.seccionUno {
   padding: 1rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  gap: 0.8rem;
-  grid-template-areas: "cbd noticias recetas";
+  text-align: center;
   background-image: linear-gradient(
     to right top,
     #c9ead0,
@@ -15,43 +9,24 @@
     #a5edae,
     #9aeea1
   );
-  img {
-    width: 100%;
-    height: 80%;
-    padding: 1rem;
-    border-radius: 15%;
-  }
-  p {
-    font-size: 2.3rem;
-    font-weight: 600;
-    text-align: center;
-    text-decoration: underline;
-    color: rgb(92, 133, 92);
-  }
-  .primerseccion__cbd {
-    width: 100%;
-    height: 100%;
-    grid-area: cbd;
-    border: 0.3rem solid rgb(92, 133, 92);
-    border-radius: 10%;
-    background-color: rgb(221, 255, 221);
-  }
-  .primerseccion__noticias {
-    width: 100%;
-    height: 100%;
-    grid-area: noticias;
-    border: 0.3rem solid rgb(92, 133, 92);
-    border-radius: 10%;
-    background-color: rgb(221, 255, 221);
-  }
-
-  .primerseccion__recetas {
-    width: 100%;
-    height: 100%;
-    grid-area: recetas;
-    border: 0.3rem solid rgb(92, 133, 92);
-    border-radius: 10%;
-    background-color: rgb(221, 255, 221);
+  .seccionUno__opciones {
+    border: 0.3rem solid #5c855c !important;
+    border-radius: 10% !important;
+    background-color: #ddffdd;
+    padding: 1.5rem;
+    margin: 1rem;
+    h5 {
+      font-size: 2rem;
+      font-weight: 600;
+      text-align: center;
+      text-decoration: underline;
+      color: rgb(92, 133, 92);
+    }
+    img {
+      margin-top: 1.5rem;
+      border-radius: 15%;
+      height: 20rem;
+    }
   }
 }
 
@@ -66,7 +41,7 @@
   h3 {
     text-decoration: underline;
   }
-  article {
+  .investigaciones__aceite {
     display: flex;
     align-items: center;
     padding: 1rem;
@@ -74,20 +49,25 @@
       font-style: italic;
       font-size: 1rem;
       margin: 1rem;
+      width: 100%;
+      height: 100%;
     }
-    img{
-      height: 20rem;
-      width: 20rem;
+    img {
+      width: 100%;
+      margin: 1rem;
     }
   }
   h2 {
     text-decoration: underline;
     margin: 1rem;
+    color: #5c855c;
+    background-color: #f1fff081;
   }
-  div {
+  .investigaciones__documental {
+    background-image: url(../multimedia/imagenes/4720828.jpg);
     iframe {
-      width: 50rem;
-      height: 30rem;
+      width: 80%;
+      height: 25rem;
     }
   }
 }
