--- a/css/estilos.css
+++ b/css/estilos.css
@@ -74,18 +74,22 @@ header .menu img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #opcionesMenu li {
+  text-align: center;
+  width: 14rem;
   list-style: none;
-  font-size: 50px;
+  font-size: 2.2rem;
   font-family: "Yanone Kaffeesatz", sans-serif;
   font-weight: bold;
-  padding: 1rem;
-  display: inline-block;
+  padding: 0.5rem;
 }
 
 #opcionesMenu li a {
@@ -99,55 +103,58 @@ header .menu img {
 }
 
 footer {
-  background-color: #2f5813;
-  color: white;
-  padding: 1rem;
-  font-family: "Yanone Kaffeesatz", sans-serif;
+  text-align: center;
   font-size: 1.5rem;
+  color: white;
+  font-family: "Yanone Kaffeesatz", sans-serif;
+  background-color: #2f5813;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
-footer .logo {
-  width: 8rem;
-  height: 8rem;
+footer img {
+  padding: 1.5rem;
+  width: 10rem;
 }
 
-footer a {
+footer div {
+  padding: 1rem;
+}
+
+footer div a {
+  text-decoration: none;
   color: white;
 }
 
-footer .footer__redes {
-  margin-top: 1rem;
+footer .footer__redes ul {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 footer .footer__redes ul li {
   list-style-type: none;
-  width: 3.5rem;
-  height: 3.5rem;
-  background-color: #2f58135e;
-  padding: 0.5rem;
-  border-radius: 150px;
-  margin: 0.5rem;
-  text-align: center;
-  display: inline-block;
 }
 
-footer .footer__redes ul li a {
-  font-size: 1rem;
-  text-decoration: none;
-}
-
-footer .footer__redes img {
-  width: 100%;
-  height: 100%;
-  padding: 0.1rem;
+footer .footer__redes ul li a img {
+  width: 4rem;
+  padding: 1rem;
 }
 
 .carrousel {
@@ -163,11 +170,13 @@ footer .footer__redes img {
 }
 
 .seccionCentral {
-  margin: 0.8rem;
+  margin: 0.3rem;
+  width: 100%;
+  height: 100%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 2fr 1fr;
-      grid-template-columns: 2fr 1fr;
+  -ms-grid-columns: 63% 35%;
+      grid-template-columns: 63% 35%;
   -ms-grid-rows: auto auto;
       grid-template-rows: auto auto;
   gap: 1rem;
@@ -481,7 +490,6 @@ footer .footer__redes img {
 .productos {
   font-family: "Rampart One", cursive;
   color: #5c855c;
-  padding: 1rem;
   background: -webkit-gradient(linear, right top, left top, from(rgba(123, 209, 66, 0.493)), color-stop(ivory), color-stop(rgba(123, 209, 66, 0.493)), to(ivory));
   background: linear-gradient(to left, rgba(123, 209, 66, 0.493), ivory, rgba(123, 209, 66, 0.493), ivory);
   display: -webkit-box;
@@ -489,6 +497,12 @@ footer .footer__redes img {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding: 1rem;
 }
 
 .productos article {
@@ -539,14 +553,19 @@ footer .footer__redes img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 .contacto article img {
-  width: 50rem;
+  width: 45rem;
   margin: 0.5rem;
 }
 
 .contacto article .contacto__formulario {
+  width: 50%;
   border: 0.3rem solid #5c855c;
   background-color: rgba(123, 209, 66, 0.075);
   font-size: 1rem;
@@ -559,7 +578,6 @@ footer .footer__redes img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 100%;
 }
 
 .contacto article .contacto__formulario input {
@@ -589,17 +607,16 @@ footer .footer__redes img {
   .seccionCentral {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: auto auto auto;
-        grid-template-rows: auto auto auto;
-        grid-template-areas: "variedad variedad" "dato noticias" "podio podio";
+    -ms-grid-rows: auto 35% auto;
+        grid-template-rows: auto 35% auto;
+    gap: 0.5rem;
+        grid-template-areas: "variedad variedad" "dato noticias" "podio podio";
   }
   .seccionCentral .noticias h2 {
-    font-size: 3rem;
+    font-size: 2rem;
   }
   .seccionCentral .noticias button {
-    font-size: 1.8rem;
+    font-size: 1rem;
   }
   .seccionCentral .segundaSeccion h2 {
     font-size: 2.5rem;
@@ -679,6 +696,14 @@ footer .footer__redes img {
   .contacto article img {
     width: 100%;
   }
+  footer img {
+    padding: 1.5rem;
+    width: 12rem;
+  }
+  footer .footer__redes ul li a img {
+    width: 3.8rem;
+    padding: 0.5rem;
+  }
 }
 
 @media (max-width: 368px) {
@@ -740,22 +765,13 @@ footer .footer__redes img {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    font-size: 1.3rem;
   }
-  footer .logo {
-    width: 6rem;
-    height: 6rem;
-    margin-bottom: 1.5rem;
+  footer img {
+    padding: 1.5rem;
+    width: 12rem;
   }
-  footer .footer__redes {
-    text-align: center;
-    padding-right: 2rem;
+  footer .footer__redes ul li a img {
+    padding: 1rem;
   }
   .instructivo .instructivo__manual h1 {
     font-size: 2.3rem;
