--- a/scss/_generales.scss
+++ b/scss/_generales.scss
@@ -25,14 +25,16 @@ header {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
   li {
+    text-align: center;
+    width: 14rem;
     list-style: none;
-    font-size: 50px;
+    font-size: 2.2rem;
     font-family: "Yanone Kaffeesatz", sans-serif;
     font-weight: bold;
-    padding: 1rem;
-    display: inline-block;
+    padding: 0.5rem;
     a {
       color: white;
       text-decoration: none;
@@ -46,42 +48,37 @@ header {
 }
 
 footer {
-  background-color: #2f5813;
-  color: white;
-  padding: 1rem;
-  font-family: "Yanone Kaffeesatz", sans-serif;
+  text-align: center;
   font-size: 1.5rem;
+  color: white;
+  font-family: "Yanone Kaffeesatz", sans-serif;
+  background-color: #2f5813;
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  .logo {
-    width: 8rem;
-    height: 8rem;
+  justify-content: space-evenly;
+  img {
+    padding: 1.5rem;
+    width: 10rem;
   }
-  a {
-    color: white;
-  }
-  .footer__redes {
-    margin-top: 1rem;
-    ul li {
-      list-style-type: none;
-      width: 3.5rem;
-      height: 3.5rem;
-      background-color: #2f58135e;
-      padding: 0.5rem;
-      border-radius: 150px;
-      margin: 0.5rem;
-      text-align: center;
-      display: inline-block;
-      a {
-        font-size: 1rem;
-        text-decoration: none;
-      }
+  div {
+    padding: 1rem;
+    a {
+      text-decoration: none;
+      color: white;
     }
-    img {
-      width: 100%;
-      height: 100%;
-      padding: 0.1rem;
+  }
+  .footer__redes ul {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    li {
+      list-style-type: none;
+      a img {
+        width: 4rem;
+        padding: 1rem;
+      }
     }
   }
 }
