--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -10,9 +10,11 @@
 }
 
 .seccionCentral {
-  margin: 0.8rem;
+  margin: 0.3rem;
+  width: 100%;
+  height: 100%;
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 63% 35%;
   grid-template-rows: auto auto;
   gap: 1rem;
   grid-template-areas:
