--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -13,17 +13,18 @@
   }
   .seccionCentral {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: auto 35% auto;
+    gap: 0.5rem;
     grid-template-areas:
       "variedad variedad"
-      "dato noticias" "podio podio";
+      "dato noticias"
+      "podio podio";
     .noticias {
       h2 {
-        font-size: 3rem;
+        font-size: 2rem;
       }
       button {
-        font-size: 1.8rem;
+        font-size: 1rem;
       }
     }
     .segundaSeccion {
@@ -90,6 +91,16 @@
     justify-content: center;
     align-items: center;
   }
+  footer {
+    img {
+      padding: 1.5rem;
+      width: 12rem;
+    }
+    .footer__redes ul li a img {
+      width: 3.8rem;
+      padding: 0.5rem;
+    }
+  }
 }
 
 @media (max-width: 368px) {
@@ -141,17 +152,12 @@
   footer {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.3rem;
-    .logo {
-      width: 6rem;
-      height: 6rem;
-      margin-bottom: 1.5rem;
+    img {
+      padding: 1.5rem;
+      width: 12rem;
     }
-    .footer__redes {
-      text-align: center;
-      padding-right: 2rem;
+    .footer__redes ul li a img {
+      padding: 1rem;
     }
   }
   .instructivo {
