--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -103,17 +103,19 @@
   }
 }
 
-@media (max-width: 368px) {
+@media (max-width: 375px) {
   #opcionesMenu li {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
-  .menu div img {
-    width: 8rem;
-    height: 8rem;
+  .menu div {
+    img {
+      width: 6rem;
+      height: 6rem;
+    }
   }
   .carrousel img {
-    width: 18rem;
-    height: 18rem;
+    width: 15rem;
+    height: 15rem;
   }
   .seccionCentral {
     display: flex;
@@ -125,7 +127,7 @@
         font-size: 1.8rem;
       }
       img:hover {
-        width: 20rem;
+        width: 18rem;
       }
       .primerSeccion__lista ul {
         padding-right: 2rem;
@@ -142,22 +144,34 @@
     }
     .noticias {
       h2 {
-        font-size: 2rem;
+        font-size: 2.1rem;
       }
       button {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
+      }
+      .noticias__info {
+        font-size: 1rem;
       }
     }
   }
   footer {
     display: flex;
     flex-direction: column;
+    font-size: 1rem;
     img {
       padding: 1.5rem;
-      width: 12rem;
+      width: 9rem;
     }
-    .footer__redes ul li a img {
-      padding: 1rem;
+    .footer__redes {
+      h3 {
+        font-size: 1.2rem;
+      }
+      ul {
+        padding: 0;
+        li a img {
+          width: 3rem;
+        }
+      }
     }
   }
   .instructivo {
