--- a/css/estilos.css
+++ b/css/estilos.css
@@ -170,13 +170,13 @@ footer .footer__redes ul li a img {
 }
 
 .seccionCentral {
-  margin: 0.3rem;
+  padding: 0.5rem;
   width: 100%;
   height: 100%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 63% 35%;
-      grid-template-columns: 63% 35%;
+  -ms-grid-columns: 60% auto;
+      grid-template-columns: 60% auto;
   -ms-grid-rows: auto auto;
       grid-template-rows: auto auto;
   gap: 1rem;
@@ -229,6 +229,10 @@ footer .footer__redes ul li a img {
   text-decoration: underline;
 }
 
+.seccionCentral .primerSeccion .primerSeccion__lista ul {
+  padding: 0;
+}
+
 .seccionCentral .primerSeccion .primerSeccion__lista ul li {
   font-size: 1.5rem;
   list-style-type: none;
@@ -240,6 +244,18 @@ footer .footer__redes ul li a img {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: podio;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .seccionCentral .segundaSeccion h2 {
@@ -247,28 +263,53 @@ footer .footer__redes ul li a img {
   color: #5c855c;
 }
 
+.seccionCentral .segundaSeccion div {
+  width: 100%;
+  padding: 1rem;
+}
+
+.seccionCentral .segundaSeccion div :hover {
+  background-color: rgba(110, 161, 76, 0.425);
+}
+
 .seccionCentral .segundaSeccion .podio {
   background-color: rgba(20, 121, 20, 0.055);
   border: dotted 0.3rem #5c855c;
+  border-radius: 5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0.3rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 100%;
   height: 100%;
-  padding: 3rem;
-  border-radius: 5rem;
-  margin: 0.5rem;
+  padding: 2rem;
 }
 
 .seccionCentral .segundaSeccion .podio img {
-  height: 10rem;
+  width: 100%;
+  height: 100%;
+  background-color: white;
 }
 
 .seccionCentral .segundaSeccion .podio .visitar {
+  margin: 2rem;
   text-decoration: none;
   background-color: #5c855c;
   border-radius: 150px;
   color: white;
   font-family: "Rampart One", cursive;
   font-size: 1rem;
-  margin: 1rem;
+  padding: 0.5rem;
   padding: 1rem;
 }
 
@@ -302,6 +343,12 @@ footer .footer__redes ul li a img {
   text-decoration: none;
 }
 
+.seccionCentral .noticias .noticias__info a:hover {
+  border-radius: 150px;
+  border: #5c855c solid;
+  padding: 0.2rem;
+}
+
 .seccionCentral .dato {
   -ms-grid-row: 2;
   -ms-grid-column: 2;
@@ -328,7 +375,7 @@ footer .footer__redes ul li a img {
 }
 
 .seccionCentral .dato p {
-  font-size: 2.5rem;
+  font-size: 2.3rem;
   padding: 0.5rem;
   background-color: #f1fff0;
 }
@@ -345,34 +392,45 @@ footer .footer__redes ul li a img {
 .instructivo {
   color: #5c855c;
   font-family: "Changa", sans-serif;
-  padding: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   background: -webkit-gradient(linear, right top, left top, from(rgba(123, 209, 66, 0.493)), color-stop(ivory), color-stop(rgba(123, 209, 66, 0.493)), to(ivory));
   background: linear-gradient(to left, rgba(123, 209, 66, 0.493), ivory, rgba(123, 209, 66, 0.493), ivory);
   border: 0.5rem double #4f991e;
+  padding: 1rem;
+}
+
+.instructivo .instructivo__manual {
+  padding: 1rem;
+  text-align: center;
 }
 
 .instructivo .instructivo__manual h1 {
   text-decoration: underline;
+  text-align: center;
+  font-size: 3.5rem;
 }
 
 .instructivo .instructivo__manual img {
-  margin: 2rem 5rem;
   width: 20rem;
 }
 
 .instructivo .instructivo__opciones {
+  padding: 1rem;
   list-style-type: none;
   text-align: start;
   font-size: 2.3rem;
   font-style: italic;
-  margin: 6rem 5rem;
 }
 
 .instructivo .instructivo__opciones li {
-  margin: 1rem;
+  margin: 2rem;
 }
 
 .instructivo .instructivo__opciones li a {
@@ -431,7 +489,7 @@ footer .footer__redes ul li a img {
 .seccionUno .seccionUno__opciones img {
   margin-top: 1.5rem;
   border-radius: 15%;
-  height: 20rem;
+  height: 60%;
 }
 
 .investigaciones {
@@ -483,8 +541,8 @@ footer .footer__redes ul li a img {
 }
 
 .investigaciones .investigaciones__documental iframe {
-  width: 80%;
-  height: 25rem;
+  width: 90%;
+  height: 20rem;
 }
 
 .productos {
@@ -601,15 +659,21 @@ footer .footer__redes ul li a img {
 }
 
 @media (max-width: 768px) {
+  /*menu*/
   #opcionesMenu li {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
+  /*index*/
   .seccionCentral {
+    width: 100%;
+    padding: 0;
     display: -ms-grid;
     display: grid;
-    -ms-grid-rows: auto 35% auto;
-        grid-template-rows: auto 35% auto;
-    gap: 0.5rem;
+    -ms-grid-columns: auto auto;
+        grid-template-columns: auto auto;
+    -ms-grid-rows: auto auto auto;
+        grid-template-rows: auto auto auto;
+    gap: 0.3rem;
         grid-template-areas: "variedad variedad" "dato noticias" "podio podio";
   }
   .seccionCentral .noticias h2 {
@@ -622,8 +686,9 @@ footer .footer__redes ul li a img {
     font-size: 2.5rem;
   }
   .seccionCentral .segundaSeccion .podio {
-    padding: 2rem;
+    padding: 1.8rem;
   }
+  /*guias*/
   .instructivo {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -639,8 +704,9 @@ footer .footer__redes ul li a img {
   .instructivo .instructivo__opciones {
     margin: 1rem;
   }
-  .primerseccion p {
-    font-size: 1.3rem;
+  /*cannabisMedicinal*/
+  .seccionUno .seccionUno__opciones h5 {
+    font-size: 1.5rem;
   }
   .investigaciones h3 {
     font-size: 2.5rem;
@@ -670,6 +736,7 @@ footer .footer__redes ul li a img {
     height: 25rem;
     width: 40rem;
   }
+  /*tienda*/
   .productos article {
     padding: 3rem;
     width: 20rem;
@@ -678,6 +745,7 @@ footer .footer__redes ul li a img {
   .productos article h2 {
     font-size: 1.3rem;
   }
+  /*contacto*/
   .contacto article {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -696,6 +764,7 @@ footer .footer__redes ul li a img {
   .contacto article img {
     width: 100%;
   }
+  /*footer*/
   footer img {
     padding: 1.5rem;
     width: 12rem;
@@ -708,7 +777,7 @@ footer .footer__redes ul li a img {
 
 @media (max-width: 576px) {
   #opcionesMenu li {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
   }
   .menu div img {
     width: 6rem;
@@ -751,6 +820,8 @@ footer .footer__redes ul li a img {
   }
   .seccionCentral .segundaSeccion {
     width: 100%;
+  }
+  .seccionCentral .segundaSeccion div {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -763,12 +834,14 @@ footer .footer__redes ul li a img {
             align-items: center;
   }
   .seccionCentral .segundaSeccion h2 {
-    text-align: center;
-    font-size: 2.3rem;
+    font-size: 2rem;
+    padding: 1.5rem;
   }
   .seccionCentral .segundaSeccion .podio {
-    margin-top: 1rem;
-    width: 18rem;
+    width: 60%;
+  }
+  .seccionCentral .segundaSeccion .podio img {
+    height: 15rem;
   }
   .seccionCentral .noticias h2 {
     font-size: 2.1rem;
@@ -850,7 +923,6 @@ footer .footer__redes ul li a img {
     font-size: 2rem;
   }
   .investigaciones .box__style--dark iframe {
-    width: 15rem;
     height: 10rem;
   }
   .contacto .contacto__titulo {
