--- a/scss/_cannabisMed.scss
+++ b/scss/_cannabisMed.scss
@@ -25,7 +25,7 @@
     img {
       margin-top: 1.5rem;
       border-radius: 15%;
-      height: 20rem;
+      height: 60%;
     }
   }
 }
@@ -66,8 +66,8 @@
   .investigaciones__documental {
     background-image: url(../multimedia/imagenes/4720828.jpg);
     iframe {
-      width: 80%;
-      height: 25rem;
+      width: 90%;
+      height: 20rem;
     }
   }
 }
