--- a/scss/_generales.scss
+++ b/scss/_generales.scss
@@ -10,41 +10,39 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  .menu {
+  nav {
     width: 100%;
     height: 100%;
     img {
       width: 10rem;
       height: 10rem;
-      margin-right: 5rem;
+    }
+    ul {
+      width: 100%;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      li {
+        text-align: center;
+        list-style: none;
+        font-size: 2.2rem;
+        font-family: "Yanone Kaffeesatz", sans-serif;
+        font-weight: bold;
+        a {
+          padding: 1rem;
+          color: white;
+          text-decoration: none;
+          width: 5rem;
+        }
+        :hover {
+          background-color: rgb(57, 133, 6);
+          border-radius: 150px;
+          color: white;
+          padding: 2rem;
+        }
+      }
     }
   }
-}
-
-#opcionesMenu {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  li {
-    text-align: center;
-    width: 14rem;
-    list-style: none;
-    font-size: 2.2rem;
-    font-family: "Yanone Kaffeesatz", sans-serif;
-    font-weight: bold;
-    padding: 0.5rem;
-    a {
-      color: white;
-      text-decoration: none;
-    }
-  }
-}
-
-#opcionesMenu li:hover {
-  background-color: rgb(57, 133, 6);
-  border-radius: 150px;
 }
 
 footer {
