--- a/scss/_guias.scss
+++ b/scss/_guias.scss
@@ -12,21 +12,14 @@
     ivory
   );
   border: 0.5rem double #4f991e;
-  padding: 1rem;
   .instructivo__manual {
-    padding: 1rem;
     text-align: center;
-    h1 {
-      text-decoration: underline;
-      text-align: center;
-      font-size: 3.5rem;
-    }
+    text-decoration: underline;
     img {
       width: 20rem;
     }
   }
   .instructivo__opciones {
-    padding: 1rem;
     list-style-type: none;
     text-align: start;
     font-size: 2.3rem;
@@ -41,28 +34,40 @@
       }
     }
   }
-}
-
-.instructivo__opciones li a:hover {
-  background-color: #4f991e;
-  color: white;
+  .instructivo__opciones li a:hover {
+    background-color: #4f991e;
+    color: white;
+  }
 }
 
 .secciones {
-  .opcionManual {
-    font-family: "Quicksand", sans-serif;
-    margin-bottom: 1rem;
-    padding: 1rem;
-    font-weight: bold;
-    background-color: #f1fff0;
-    button {
-      margin: 0.5rem;
-    }
-  }
-  .card-header.titulo {
+  font-family: "Changa", sans-serif;
+  h5{
     background-color: rgba(123, 209, 66, 0.541);
     color: #447444;
-    font-family: "Changa", sans-serif;
-
   }
+  .opcionManual {
+    padding: 1rem;
+    display: flex;
+    background-color: rgba(123, 209, 66, 0.192);
+
+    img{
+      width: 25%;
+    }
+    p{
+      padding: 2rem;
+    }
+  }
+  a{
+    text-decoration: none;
+    text-align: center;
+    background-color: #5c855c;
+    border-radius: 150px;
+    color: white;
+    font-size: 1rem;
+    padding: 0.5rem;
+    width: 6rem;
+    margin: 0.5rem;
+  }
+  
 }
