--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -20,34 +20,36 @@
   grid-template-areas:
     "variedad noticias"
     "podio dato";
-  .primerSeccion {
+  .seccionCentral__uno {
     background-color: rgba(123, 209, 66, 0.336);
     text-align: center;
+    font-family: "Changa", sans-serif;
     grid-area: variedad;
     .primerSeccion__elegida {
       background-color: rgba(123, 209, 66, 0.336);
-    }
-    h5 {
-      font-family: "Changa", sans-serif;
-      color: #5c855c;
-      text-decoration: underline;
-    }
-    img {
-      width: 15rem;
-      height: 20rem;
-      transition: all 2s;
-      margin: 1rem;
-    }
-    p {
-      padding: 1rem;
-      font-family: "Changa", sans-serif;
-      font-size: 1.2rem;
-      font-style: italic;
-      font-weight: lighter;
+      h5 {
+        color: #5c855c;
+        text-decoration: underline;
+      }
+      img {
+        width: 15rem;
+        height: 20rem;
+        transition: all 2s;
+        margin: 1rem;
+      }
+      img:hover {
+        width: 25rem;
+        height: 25rem;
+      }
+      p {
+        padding: 1rem;
+        font-size: 1.2rem;
+        font-style: italic;
+        font-weight: lighter;
+      }
     }
     .primerSeccion__lista {
       color: #5c855c;
-      font-family: "Changa", sans-serif;
       background-color: #f1fff0;
       padding: 1rem;
       margin: 1.5rem;
@@ -64,63 +66,55 @@
       }
     }
   }
-  .segundaSeccion {
+  .seccionCentral__dos {
     text-align: center;
     grid-area: podio;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: flex-end;
+    border: 0.3rem solid #5c855c;
+    font-family: "Rampart One", cursive;
     h2 {
-      font-family: "Rampart One", cursive;
       color: #5c855c;
     }
-    div{
+    div {
       width: 100%;
       padding: 1rem;
-      :hover{
-        background-color: rgba(110, 161, 76, 0.425);
-      }
-    }     
-     
-       .podio {
-        background-color: rgba(20, 121, 20, 0.055);
+      .podio {
         border: dotted 0.3rem #5c855c;
         border-radius: 5rem;
         display: flex;
         flex-direction: column;
-        align-items: center;
         margin: 0.3rem;
-        justify-content: space-between;
-        width: 100%;
         height: 100%;
         padding: 2rem;
-       
         img {
           width: 100%;
           height: 100%;
           background-color: white;
-          
         }
-        .visitar {
+        a {
           margin: 2rem;
           text-decoration: none;
           background-color: #5c855c;
           border-radius: 150px;
           color: white;
-          font-family: "Rampart One", cursive;
           font-size: 1rem;
           padding: 0.5rem;
-          padding: 1rem;
         }
       }
+      .podio:hover {
+        background-color: rgba(123, 209, 66, 0.336);
+      }
+    }
   }
-
-  .noticias {
+  .seccionCentral__tres {
     padding: 1rem;
     font-family: "Architects Daughter", cursive;
     color: #5c855c;
     grid-area: noticias;
+    border: 0.3rem solid #5c855c;
     h2 {
       text-align: center;
     }
@@ -139,19 +133,19 @@
     .noticias__info {
       font-size: 1rem;
       a {
+        margin: 0.5rem;
+        padding: 0.2rem;
         font-weight: bold;
         color: #5c855c;
         text-decoration: none;
       }
-      a:hover{
+      a:hover {
         border-radius: 150px;
         border: #5c855c solid;
-        padding: 0.2rem;
-             }
+      }
     }
   }
-
-  .dato {
+  .seccionCentral__cuatro {
     grid-area: dato;
     background-image: linear-gradient(
       to right top,
@@ -165,11 +159,8 @@
     padding: 1.5rem;
     font-family: "Yanone Kaffeesatz", sans-serif;
     color: #5c855c;
-    height: 100%;
-    width: 100%;
     h3 {
       background-color: #f1fff0;
-      padding: 0.5rem;
     }
     img {
       width: 100%;
@@ -178,17 +169,7 @@
     }
     p {
       font-size: 2.3rem;
-      padding: 0.5rem;
       background-color: #f1fff0;
     }
   }
-}
-
-.primerSeccion img:hover {
-  width: 25rem;
-  height: 25rem;
-}
-
-.podio:hover {
-  background-color: rgba(123, 209, 66, 0.336);
 }
